--- a/views/povcontrol.ejs
+++ b/views/povcontrol.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/vendors/bootstrap/css/bootstrap.min.css" />
     <script src="/vendors/jquery/jquery.min.js"></script>
     <script src="/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendors/protobufjs/protobuf.min.js"></script>
     <style>
         #textareaLog {
             width: 1000px;
